# picoterm-rs

./: .gitignore  Cargo.toml  LICENSE  README-ja.md  README.md  build.rs
.cargo/: config.toml
src/: main.rs  uart_core1.rs  usb_serial.rs
src/board/: bsp.rs  mod.rs
src/board/rp2040/: mod.rs  usb.rs
src/board/rp2350/: mod.rs  usb.rs
