[package]
name = "picoterm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "0.1.2"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.9"
fugit = "0.3.7"

# USB support
usb-device = "0.3"
usbd-serial = "0.2"
