[package]
name = "picoterm-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "0.1.2"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = { version = "0.9", optional = true }
fugit = "0.3.7"

# USB support
usb-device = "0.3"
usbd-serial = "0.2"

# Multicore support
rp2040-hal = { version = "0.10", optional = true }
heapless = "0.8"
critical-section = "1.0"

[features]
default = ["rp2040"]
rp2040 = ["rp-pico", "rp2040-hal"]
rp2350 = []
