[package]
name = "picoterm-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "0.1.2"

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = { version = "0.9", optional = true }
fugit = "0.3.7"

# USB-related dependencies (make available for all targets)
usb-device = "0.3"
usbd-serial = "0.2"
heapless = "0.8"

# Multicore helpers
rp2040-hal = { version = "0.10", optional = true }
# RP2350 HAL - only compiled when rp2350 feature is enabled
rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"], optional = true }
# critical-section crate (if needed)
critical-section = "1.0"
rp-binary-info = { version = "0.1", optional = true }

[features]
# board feature flags: select which board-specific settings to compile
# - `rp2040` is enabled by default so existing builds are unaffected
rp2040 = ["rp-pico", "rp2040-hal"]
# `rp2350` enables the optional `rp235x-hal` dependency so it's only
# compiled when the feature is explicitly requested (and usually when
# cross-compiling for the thumbv8m target).
rp2350 = ["rp235x-hal", "rp-binary-info"]
default = ["rp2040"]
